--- a/Shop.Test/Shop.Test.csproj
+++ b/Shop.Test/Shop.Test.csproj
@@ -45,8 +45,12 @@
     <Compile Include="Interface\IShoppingCart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shop.cs" />
+    <Compile Include="Rule\AppleRule.cs" />
     <Compile Include="ShoppingActivities\CalculatePrice.cs" />
     <Compile Include="ShoppingActivities\CheckOut.cs" />
+    <Compile Include="ShoppingActivities\CheckOutPriceCalculation.cs" />
+    <Compile Include="Rule\OrangleRule.cs" />
+    <Compile Include="Interface\IRule.cs" />
     <Compile Include="ShoppingActivities\Reciept.cs" />
     <Compile Include="ShoppingActivities\RecieptItem.cs" />
     <Compile Include="ShoppingActivities\ShoppingCart.cs" />
